# rlean-plugins

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  registry.json
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: auto-tag.yml  lint.yml  release.yml  test.yml
brokerages/: Cargo.toml
brokerages/alpaca/: Cargo.toml
brokerages/alpaca/src/: lib.rs
brokerages/binance/: Cargo.toml
brokerages/binance/src/: lib.rs
brokerages/coinbase/: Cargo.toml
brokerages/coinbase/src/: lib.rs
brokerages/fidelity/: Cargo.toml
brokerages/fidelity/src/: lib.rs
brokerages/fxcm/: Cargo.toml
brokerages/fxcm/src/: lib.rs
brokerages/interactive_brokers/: Cargo.toml
brokerages/interactive_brokers/src/: lib.rs
brokerages/oanda/: Cargo.toml
brokerages/oanda/src/: lib.rs
brokerages/robinhood/: Cargo.toml
brokerages/robinhood/src/: lib.rs
brokerages/src/: alpaca.rs  binance_brokerage.rs  coinbase.rs  fidelity.rs  fxcm_brokerage.rs  interactive_brokers.rs  lib.rs  oanda_brokerage.rs  robinhood.rs
brokerages/src/tradier/: brokerage_model.rs
brokerages/tradier/: Cargo.toml
brokerages/tradier/src/: brokerage.rs  brokerage_model.rs  client.rs  config.rs  history_provider.rs  lib.rs  live_provider.rs  models.rs
custom_data/cboe_vix/: Cargo.toml
custom_data/cboe_vix/src/: lib.rs
custom_data/fred/: Cargo.toml
custom_data/fred/src/: lib.rs
custom_data/fred/tests/: live_series.rs
data_providers/hyperliquid/: Cargo.toml
data_providers/hyperliquid/src/: archive.rs  brokerage.rs  history_provider.rs  lib.rs  live_provider.rs  universe_source.rs
data_providers/massive/: Cargo.toml
data_providers/massive/src/: client.rs  corporate_actions.rs  history_provider.rs  lib.rs  models.rs
data_providers/massive/tests/: backfill_factor_files.rs  live_factor_file.rs
data_providers/thetadata/: Cargo.toml
data_providers/thetadata/src/: client.rs  history_provider.rs  lib.rs  models.rs
massive/: Cargo.toml
massive/src/: client.rs  corporate_actions.rs  history_provider.rs  lib.rs
scripts/: bump-version.sh
thetadata/: Cargo.toml
thetadata/src/: client.rs  history_provider.rs
