[workspace]
members = ["massive", "thetadata"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cascade Labs"]
license = "Apache-2.0"

[workspace.dependencies]
# Core rlean crates — fetched from GitHub at install time.
# For local development, create a .cargo/config.toml (gitignored) with
# [patch."https://github.com/cascade-labs/rlean"] path overrides.
lean-core           = { git = "https://github.com/cascade-labs/rlean", package = "lean-core" }
lean-data           = { git = "https://github.com/cascade-labs/rlean", package = "lean-data" }
lean-storage        = { git = "https://github.com/cascade-labs/rlean", package = "lean-storage" }
lean-data-providers = { git = "https://github.com/cascade-labs/rlean", package = "lean-data-providers" }
lean-plugin         = { git = "https://github.com/cascade-labs/rlean", package = "lean-plugin" }

# Common deps
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono      = { version = "0.4", features = ["serde"] }
tracing     = "0.1"
async-trait = "0.1"

# Extra deps used by specific plugins
rust_decimal = { version = "1", features = ["serde-with-str"] }
arrow-array  = "53"
arrow-schema = "53"
parquet      = { version = "53", features = ["async"] }
tempfile     = "3"
