[package]
name = "rlean-plugin-brokerages"
version.workspace = true
edition.workspace = true
description = "rlean plugin: brokerage model stubs (Alpaca, Binance, Coinbase, Fidelity, FXCM, IB, OANDA, Robinhood, Tradier)"

[lib]
name = "rlean_plugin_brokerages"
crate-type = ["rlib"]

[dependencies]
lean-brokerages = { workspace = true }
lean-orders     = { workspace = true }
lean-core       = { workspace = true }
rust_decimal        = { workspace = true }
rust_decimal_macros = "1"
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
