[package]
name = "rlean-plugin-thetadata"
version.workspace = true
edition.workspace = true
description = "rlean plugin: ThetaData historical options and equity data provider"

[lib]
name = "rlean_plugin_thetadata"
crate-type = ["cdylib", "rlib"]

[dependencies]
lean-core           = { workspace = true }
lean-data           = { workspace = true }
lean-storage        = { workspace = true }
lean-data-providers = { workspace = true }
lean-plugin         = { workspace = true }

tokio        = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
reqwest      = { workspace = true }
chrono       = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
