[package]
name = "rlean-plugin-alpaca"
version.workspace = true
edition.workspace = true
description = "rlean plugin: Alpaca brokerage model"

[lib]
name = "rlean_plugin_alpaca"
crate-type = ["cdylib", "rlib"]

[dependencies]
lean-brokerages = { workspace = true }
lean-orders     = { workspace = true }
lean-core       = { workspace = true }
rust_decimal        = { workspace = true }
rust_decimal_macros = "1"

