[package]
name = "rlean-plugin-coinbase"
version.workspace = true
edition.workspace = true
description = "rlean plugin: Coinbase brokerage model"

[lib]
name = "rlean_plugin_coinbase"
crate-type = ["cdylib", "rlib"]

[dependencies]
lean-brokerages = { workspace = true }
lean-orders     = { workspace = true }
lean-core       = { workspace = true }
rust_decimal        = { workspace = true }
rust_decimal_macros = "1"

