[package]
name = "rlean-plugin-interactive-brokers"
version.workspace = true
edition.workspace = true
description = "rlean plugin: Interactive Brokers brokerage model"

[lib]
name = "rlean_plugin_interactive_brokers"
crate-type = ["cdylib", "rlib"]

[dependencies]
lean-brokerages = { workspace = true }
lean-orders     = { workspace = true }
lean-core       = { workspace = true }
rust_decimal        = { workspace = true }
rust_decimal_macros = "1"

