[package]
name = "rlean-plugin-tradier"
version.workspace = true
edition.workspace = true
description = "rlean plugin: Tradier brokerage (live order routing via REST API)"

[lib]
name = "rlean_plugin_tradier"
crate-type = ["cdylib", "rlib"]

[dependencies]
lean-brokerages = { workspace = true }
lean-data       = { workspace = true }
lean-orders     = { workspace = true }
lean-core       = { workspace = true }
lean-plugin     = { workspace = true }
rust_decimal        = { workspace = true }
rust_decimal_macros = "1"
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
crossbeam-channel = "0.5"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
