[package]
name = "rlean-plugin-cboe-vix"
version.workspace = true
edition.workspace = true
description = "rlean plugin: CBOE VIX daily OHLC (fear index)"

[lib]
name = "rlean_plugin_cboe_vix"
crate-type = ["cdylib", "lib"]

[dependencies]
lean-core           = { workspace = true }
lean-data           = { workspace = true }
lean-data-providers = { workspace = true }
lean-plugin         = { workspace = true }
rust_decimal        = { workspace = true }
chrono              = { workspace = true }
serde_json          = { workspace = true }
anyhow              = { workspace = true }
