[package]
name = "rlean-plugin-hyperliquid"
version.workspace = true
edition.workspace = true
description = "rlean plugin: Hyperliquid S3 archive historical data provider"

[lib]
name = "rlean_plugin_hyperliquid"
crate-type = ["cdylib", "rlib"]

[dependencies]
lean-core           = { workspace = true }
lean-data           = { workspace = true }
lean-storage        = { workspace = true }
lean-data-providers = { workspace = true }
lean-plugin         = { workspace = true }

tokio        = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
csv          = "1"
chrono       = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
rust_decimal = { workspace = true }
reqwest      = { workspace = true }
aws-config   = "1"
aws-sdk-s3   = "1"
lz4_flex     = { version = "0.11", features = ["frame"] }

[dev-dependencies]
tempfile = { workspace = true }
